--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Spectral:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Spectral:wght@400;500;600;700&family=Mulish:wght@300;400;500;600;700&display=swap');
 
 /* Base styles */
 body {
   background-color: #F0EEE6;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Mulish', sans-serif;
   color: #44403C;
 }
 
